--- a/www/fr/index.html
+++ b/www/fr/index.html
@@ -170,7 +170,7 @@
 			<ul>
 				<li>E-mail :<br><a translate="no" href="mailto:kontakt@bezahlkarte-stoppen.de">kontakt@bezahlkarte-stoppen.de</a></li>
 				<li>Instagram :<br><a translate="no" href="https://www.instagram.com/bezahlkartestoppen">@bezahlkartestoppen</a></li>
-				<li>Telegram :<br><a translte="no" href="https://t.me/bezahlkarte_stoppen">carte_de_paiement_stop</a></li>
+				<li>Telegram :<br><a translte="no" href="https://t.me/bezahlkarte_stoppen">bezahlkarte_stoppen</a></li>
 			</ul>
 
 			<h2>Dons</h2>
