--- a/www/ru/index.html
+++ b/www/ru/index.html
@@ -170,7 +170,7 @@
 			<ul>
 				<li>Пишите нам:<br><a translate="no" href="mailto:kontakt@bezahlkarte-stoppen.de">kontakt@bezahlkarte-stoppen.de</a></li>
 				<li>Instagram:<br><a translate="no" href="https://www.instagram.com/bezahlkartestoppen">@bezahlkartestoppen</a></li>
-				<li>Telegram:<br><a translte="no" href="https://t.me/bezahlkarte_stoppen">paycard_stop</a></li>
+				<li>Telegram:<br><a translte="no" href="https://t.me/bezahlkarte_stoppen">bezahlkarte_stoppen</a></li>
 			</ul>
 
 			<h2>Пожертвовать</h2>
